--- a/CacelApp/Shared/Controls/Form/FormComboBox.xaml
+++ b/CacelApp/Shared/Controls/Form/FormComboBox.xaml
@@ -1,22 +1,25 @@
 <UserControl x:Class="CacelApp.Shared.Controls.Form.FormComboBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:converters="clr-namespace:CacelApp.Config.Converters">
+
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+        <converters:ComboBoxValueConverter x:Key="ComboBoxValueConverter" />
     </UserControl.Resources>
 
     <Grid>
         <ComboBox x:Name="ComboBoxControl"
-                  Style="{StaticResource MaterialDesignFloatingHintComboBox}"
-                  FontSize="13"
-                  materialDesign:HintAssist.Hint="{Binding DisplayLabel, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                  materialDesign:HintAssist.HelperText="{Binding HelperText, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                  SelectedValue="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}, Mode=TwoWay}"
-                  IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                  ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Options}"
-                  DisplayMemberPath="Label"
-                  SelectedValuePath="Value"/>
+              Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+              FontSize="13"
+              materialDesign:HintAssist.Hint="{Binding DisplayLabel, RelativeSource={RelativeSource AncestorType=UserControl}}"
+              materialDesign:HintAssist.HelperText="{Binding HelperText, RelativeSource={RelativeSource AncestorType=UserControl}}"
+              SelectedValue="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}, Mode=TwoWay, Converter={StaticResource ComboBoxValueConverter}}"
+              IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=UserControl}}"
+              ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Options}"
+              DisplayMemberPath="Label"
+              SelectedValuePath="Value"/>
     </Grid>
 </UserControl>
